Add to minio successfully
