# backend/docs/swagger.yaml
@@ -10,6 +10,38 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/v1/materials:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: Title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: Desc
+        in: formData
+        name: desc
+        required: true
+        type: string
+      - description: Material File
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Add material
   /login:
     post:
       parameters:
